# cardano-keri

./: .gitignore  README.md  discussion.md  gate.sh  justfile  mkdocs.yml  system-discussion.md
.github/workflows/: ci.yml  deploy-docs.yml
.specify/memory/: constitution.md
claude/: ANALYSIS.md  SYSTEM_ANALYSIS.md
codex/: ANALYSIS.md  SYSTEM_ANALYSIS.md
docs/: acdc-primer.md  aid-ops.md  finance-primer.md  index.md  keri-primer.md  roadmap.md
docs/architecture/: amaru-integration.md  identity-ops.md  overview.md  system.md  value-auth.md  veridian-bridge.md
docs/blog/: self-certifying-identities-on-cardano.md  series-notes-vlei.md
docs/design/: aid-model.md  blake2b256-requirement.md  blake3-requirement.md  defi-gate.md  operational.md  super-watcher.md  trust-model.md  user-experience.md  vlei.md
docs/design/business-cases/: index.md  institutional-contracts.md  regulated-defi.md  security-tokens.md  spo-delegation.md
docs/identity-on-cardano/: PROMPT.md  index.html  preview.md
docs/m1-user-story-deck/: PROMPT.md  README.md  index.html
docs/m1-user-story-deck/blog/: cf-blog-post-cardano-keri-v3.md
docs/milestones-deck/: index.html
docs/vetting/: aid-ops-historical.md  analysis-2-consistency.md  analysis-2-soundness.md  analysis-claude.md  canonical-model-findings.md  codex-to-claude.md  index.md
lean/: CardanoKeri.lean  README.md  lake-manifest.json  lakefile.lean  traceability.csv
lean/CardanoKeri/: Goals.lean  Invariants.lean  Lifecycle.lean
lib/cardano_aid/: base64url.ak  base64url_tests.ak
offchain/: LICENSE  cabal.project  cabal.project.devshell  cardano-aid.cabal  cardano-keri.cabal  flake.nix
offchain/app/: GenAdvanceVectors.hs  GenCheckpointVectors.hs  GenEnforcementVectors.hs  GenFreezeBondVectors.hs  GenLifecycleTraceVectors.hs  GenRegistrationVectors.hs  GenUnicityVectors.hs  GenVectors.hs
offchain/e2e/: CageE2ESpec.hs  CageTxBuilder.hs  CheckpointE2ESpec.hs  CheckpointTxBuilder.hs  e2e-main.hs  sweep-boundary.md
offchain/e2e/Cardano/KERI/AID/E2E/: AssetName.hs  Datum.hs  Mpf.hs  MpfProof.hs  MpfTrie.hs  Script.hs  Wire.hs
offchain/lib/Cardano/AID/: CESR.hs  Ed25519.hs
offchain/lib/Cardano/AID/Cage/: Sign.hs  Types.hs
offchain/lib/Cardano/KERI/AID/: CESR.hs  Ed25519.hs
offchain/lib/Cardano/KERI/AID/Blake3/: Checkpoint.hs
offchain/lib/Cardano/KERI/AID/Cage/: Sign.hs  Types.hs
offchain/lib/Cardano/KERI/AID/Checkpoint/: Advance.hs  Datum.hs  Enforcement.hs  FreezeBond.hs  LifecycleModel.hs  Message.hs  Registration.hs  Threshold.hs  Unicity.hs
offchain/test/: Main.hs
offchain/test/Cardano/AID/: CESRSpec.hs  Ed25519Spec.hs
offchain/test/Cardano/AID/Cage/: SignSpec.hs  TypesSpec.hs
offchain/test/Cardano/KERI/AID/: CESRSpec.hs  Ed25519Spec.hs
offchain/test/Cardano/KERI/AID/Blake3/: CheckpointSpec.hs
offchain/test/Cardano/KERI/AID/Cage/: SignSpec.hs  TypesSpec.hs
offchain/test/Cardano/KERI/AID/Checkpoint/: AdvanceFixturesSpec.hs  AdvanceSpec.hs  DatumSpec.hs  EnforcementSpec.hs  FixtureLoader.hs  FreezeBondSpec.hs  Keri68OracleSpec.hs  LifecycleModelSpec.hs  MessageSpec.hs  RegistrationFixturesSpec.hs  RegistrationSpec.hs  ThresholdSpec.hs  UnicitySpec.hs
offchain/test/keri-fixtures/: flake.nix  gen_fixtures.py  pyproject.toml  run.sh
offchain/test/keri-fixtures/fixtures/: advance.json  fork.json  fork_witnessed.json  lag.json  manifest.json  registration.json
onchain/: aiken.toml
onchain/lib/cardano_aid/: base64url_tests.ak
onchain/lib/cardano_keri/: base64url.ak  base64url_tests.ak  blake3.ak
onchain/lib/cardano_keri/checkpoint/: advance.ak  advance_tests.ak  advance_vectors.ak  datum.ak  datum_tests.ak  enforcement.ak  enforcement_measurements.ak  enforcement_tests.ak  enforcement_vectors.ak  freeze_bond.ak  freeze_bond_tests.ak  freeze_bond_vectors.ak  lifecycle_model.ak  lifecycle_model_tests.ak  lifecycle_model_vectors.ak  message.ak  message_tests.ak  observer.ak  observer_tests.ak  registration.ak  (+10 more)
onchain/validators/: cage.ak  cage.tests.ak  cage_boundary.ak  cage_context.ak  cage_measurements.ak  checkpoint.ak  checkpoint_measurements.ak  checkpoint_observer.ak  checkpoint_observer_tests.ak  checkpoint_registry_tests.ak  checkpoint_tests.ak  hash_proof.ak  hash_proof_measurements.ak  hash_proof_tests.ak  lib.ak  types.ak
scripts/: check-lean-traceability.sh
specs/106-enforcement/: MEASUREMENTS.md  gen_fixtures.py  plan.md  run.sh  spec.md  tasks.md
specs/106-enforcement/fixtures/: honest_2key.json  honest_7key.json
specs/114-permissionless-registration/: MEASUREMENTS.md  plan.md  spec.md  tasks.md
specs/114-registration/: MEASUREMENTS.md  plan.md  spec.md  tasks.md
specs/115-advance/: MEASUREMENTS.md  plan.md  spec.md  tasks.md
specs/116-enforcement/: MEASUREMENTS.md  plan.md  spec.md  tasks.md
specs/116-freeze-bond/: MEASUREMENTS.md  plan.md  spec.md  tasks.md
specs/117-close-lookup/: plan.md  spec.md  tasks.md
specs/129-compliance/: matrix.md
specs/15-revet-permissionless/: plan.md  spec.md  tasks.md
specs/23-identity-auth/: spec.md
specs/24-keystate/: spec.md
specs/39-auth-envelope/: spec.md
specs/56-ci-org-standard/: plan.md  spec.md  tasks.md
specs/68-keystate-shape/: accept.sh  acdc-zoo.md  blake3-wall-decision.md  delegation-boundary-decision.md  discussion.md  identity-model.md  plan.md  spec.md  system-architecture.md  tasks.md
specs/91-genesis-registration/: accept.sh  plan.md  spec.md  tasks.md
specs/92-checkpoint-contention/: DECISION.md  accept.sh  plan.md  spec.md  tasks.md
specs/97-blake3-multitx/: plan.md  spec.md  tasks.md
specs/99-cage-security/: REPORT.md  plan.md  spec.md  tasks.md
spikes/88-blake3-plutus/: README.md  REPORT.md  aiken.toml  flake.nix
spikes/88-blake3-plutus/lib/: blake3.ak  blake3_tests.ak  measurements.ak  probes.ak
spikes/97-blake3-multitx/: README.md  REPORT.md  aiken.toml
spikes/97-blake3-multitx/lib/: blake3.ak  blake3_tests.ak
spikes/97-blake3-multitx/validators/: checkpoint.ak  checkpoint_tests.ak  measurements.ak
vetting/: README.md  analysis-codex.md  claude-to-codex.md  codex-to-claude.md
