cabal-version: 3.4
name:          cardano-keri
version:       0.0.0
synopsis:
  Haskell library for KERI-AID identity operations and cage validator types

description:
  Pure Haskell implementation of KERI Ed25519 verification, CESR
  encoding/decoding, and PlutusData types matching the cardano-keri
  extended cage validator (AIDOwnerAuth, AIDRequestAction, AIDOnChainTokenState).

license:       Apache-2.0
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
category:      Cardano
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    RecordWildCards
    StrictData

library
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   lib
  build-depends:
    , base                  >=4.18 && <5
    , bytestring            >=0.11 && <0.13
    , cardano-crypto-class
    , memory                >=0.18 && <0.19
    , plutus-core
    , plutus-tx

  exposed-modules:
    Cardano.KERI.AID.Blake3.Checkpoint
    Cardano.KERI.AID.Cage.Sign
    Cardano.KERI.AID.Cage.Types
    Cardano.KERI.AID.CESR
    Cardano.KERI.AID.Ed25519

test-suite unit-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , cardano-crypto-class
    , cardano-keri
    , hspec                 >=2.11 && <2.12
    , memory                >=0.18 && <0.19
    , plutus-core
    , plutus-tx
    , QuickCheck

  other-modules:
    Cardano.KERI.AID.Blake3.CheckpointSpec
    Cardano.KERI.AID.Cage.SignSpec
    Cardano.KERI.AID.Cage.TypesSpec
    Cardano.KERI.AID.CESRSpec
    Cardano.KERI.AID.Ed25519Spec

  ghc-options:      -threaded -with-rtsopts=-N

executable gen-vectors
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   app
  main-is:          GenVectors.hs
  build-depends:
    , base
    , bytestring
    , cardano-crypto-class
    , cardano-keri
