cabal-version: 3.4
name:          cardano-keri
version:       0.0.0
synopsis:
  Haskell library for KERI-AID identity operations and cage validator types

description:
  Pure Haskell implementation of KERI Ed25519 verification, CESR
  encoding/decoding, and PlutusData types matching the cardano-keri
  extended cage validator (AIDOwnerAuth, AIDRequestAction, AIDOnChainTokenState).

license:       Apache-2.0
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
category:      Cardano
build-type:    Simple

-- Committed keripy oracle fixtures, read hermetically by the unit-tests
-- Keri68OracleSpec via Paths_cardano_keri (getDataFileName).
data-files:    test/keri-fixtures/fixtures/*.json

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    RecordWildCards
    StrictData

library
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   lib
  build-depends:
    , base                  >=4.18 && <5
    , bytestring            >=0.11 && <0.13
    , cardano-crypto-class
    , containers
    , memory                >=0.18 && <0.19
    , plutus-core
    , plutus-tx
    , text

  exposed-modules:
    Cardano.KERI.AID.Blake3.Checkpoint
    Cardano.KERI.AID.Cage.Sign
    Cardano.KERI.AID.Cage.Types
    Cardano.KERI.AID.CESR
    Cardano.KERI.AID.Checkpoint.Datum
    Cardano.KERI.AID.Checkpoint.Enforcement
    Cardano.KERI.AID.Checkpoint.Message
    Cardano.KERI.AID.Checkpoint.Threshold
    Cardano.KERI.AID.Ed25519

test-suite unit-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-crypto-class
    , cardano-keri
    , containers
    , hspec                 >=2.11 && <2.12
    , memory                >=0.18 && <0.19
    , plutus-core
    , plutus-tx
    , QuickCheck
    , text

  other-modules:
    Cardano.KERI.AID.Blake3.CheckpointSpec
    Cardano.KERI.AID.Cage.SignSpec
    Cardano.KERI.AID.Cage.TypesSpec
    Cardano.KERI.AID.CESRSpec
    Cardano.KERI.AID.Checkpoint.DatumSpec
    Cardano.KERI.AID.Checkpoint.EnforcementSpec
    Cardano.KERI.AID.Checkpoint.FixtureLoader
    Cardano.KERI.AID.Checkpoint.Keri68OracleSpec
    Cardano.KERI.AID.Checkpoint.MessageSpec
    Cardano.KERI.AID.Checkpoint.ThresholdSpec
    Cardano.KERI.AID.Ed25519Spec
    Paths_cardano_keri

  ghc-options:      -threaded -with-rtsopts=-N

executable gen-vectors
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   app
  main-is:          GenVectors.hs
  build-depends:
    , base
    , bytestring
    , cardano-crypto-class
    , cardano-keri

executable gen-checkpoint-vectors
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   app
  main-is:          GenCheckpointVectors.hs
  build-depends:
    , base
    , bytestring
    , cardano-keri
    , memory        >=0.18 && <0.19

executable gen-enforcement-vectors
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   app
  main-is:          GenEnforcementVectors.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-keri
    , memory        >=0.18 && <0.19
    , text

-- Live-boundary E2E smoke: builds a hardened #99 `Modify` transaction and
-- submits it to a real cardano-node started via cardano-node-clients'
-- `devnet` public sublibrary (Cardano.Node.Client.E2E.Setup.withDevnet),
-- observing it settle on-chain. Linux-only in the flake wiring; the
-- `build-node-tools` flag lets non-Linux `cabal build all` skip it.
flag build-node-tools
  description: Build the cardano-node-clients-backed e2e smoke.
  default:     True
  manual:      True

test-suite e2e-tests
  import:           warnings

  if !flag(build-node-tools)
    buildable: False

  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   e2e
  main-is:          e2e-main.hs
  other-modules:
    CageE2ESpec
    CageTxBuilder
    Cardano.KERI.AID.E2E.AssetName
    Cardano.KERI.AID.E2E.Datum
    Cardano.KERI.AID.E2E.Mpf
    Cardano.KERI.AID.E2E.MpfProof
    Cardano.KERI.AID.E2E.MpfTrie
    Cardano.KERI.AID.E2E.Script
    Cardano.KERI.AID.E2E.Wire

  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-crypto-class
    , cardano-keri
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-node-clients:devnet
    , cardano-strict-containers
    , containers
    , hspec                        >=2.11 && <2.12
    , microlens
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text
    , time

  ghc-options:      -threaded -with-rtsopts=-N
