[project]
name = "cardano-keri-fixtures"
version = "0.0.0"
description = "Deterministic keripy oracle fixtures for cardano-keri #106"
requires-python = ">=3.12.6,<3.13"
dependencies = ["keri==1.3.5"]

[tool.uv]
package = false
environments = ["python_full_version >= '3.12.6' and python_full_version < '3.13'"]
